# claude_orchestrator

./: .gitignore  README.md  pyproject.toml
src/gesture_orchestrator/: __init__.py  __main__.py  camera.py  cli.py  config.py  detector.py  dispatcher.py  gestures.py  overlay.py  smoothing.py  voice.py
tasks/: todo.md
tests/: test_cli.py  test_dispatcher.py  test_gestures.py  test_smoothing.py  test_voice.py
